@@ -32,6 +32,7 @@ K  7378	Deadlock in IMAPFolder.doProtocolCommand()
 K  7471	InternetAddress.getLocalAddress should use
 	InetAddress.getCanonicalHostName
 K  7472	Store finalizers should not talk to server
+K  7506	MailHandler verify should load additional content handlers
 K  7512	NullPointerException if SASL is enabled on Android
 K  7513	write timeouts don't work with SSL on Android
 
